--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,10 @@ approx = "0.5.1"
 rand = "0.8.5"
 log = "0.4.20"
 tspf = "0.3.1"
+
+[dev-dependencies]
+criterion = "0.5.1"
+
+[[bench]]
+name = "benchmarks"
+harness = false
