Added draft of benchmarking function

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,6 @@ rust-project.json
 
 
 # End of https://www.toptal.com/developers/gitignore/api/rust,rust-analyzer,intellij+all,intellij+iml
+
+*_search.csv
+*_benchmark.csv
