--- a/.gitignore
+++ b/.gitignore
@@ -170,4 +170,4 @@ rust-project.json
 # End of https://www.toptal.com/developers/gitignore/api/rust,rust-analyzer,intellij+all,intellij+iml
 
 *_search.csv
-*_benchmark.csv
+*Benchmark.csv
