--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ approx = "0.5.1"
 rand = "0.8.5"
 log = "0.4.20"
 rayon = "1.10.0"
-
+clap = { version = "4.0", features = ["derive"] }
 [dev-dependencies]
 criterion = "0.5.1"
 approx = "0.5.0"
