--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ clap = { version = "4.0", features = ["derive"] }
 [dev-dependencies]
 criterion = "0.5.1"
 approx = "0.5.0"
+petgraph = "0.6.5"
 
 
 [[bench]]
